<resources>
    <string name="app_name">汉字修复</string>

    <string name="label_cancel">取消</string>
    <string name="label_ok">确定</string>
    <string name="permission_title_rationale">权限需求</string>
    <string name="permission_read_storage_rationale">选择图片时需要读取权限</string>
    <string name="permission_write_storage_rationale">拍照时需要存储权限</string>
    <string name="app_title">汉字风格</string>
    <string name="history_title">历史记录</string>
    <string name="upload">上传图片</string>
    <string name="download">获取结果</string>
    <string name="history">历史记录</string>
    <string name="otherfuncs">其他功能</string>
    <string name="other_func">其他功能</string>
    <string name="repair">残损修复</string>
    <string name="identify">笔迹鉴定</string>
    <string name="imitate">风格模仿</string>
    <string name="manufacture">手写识别</string>
    <string name="result_title">结果展示</string>
    <string name="upload_title">上传图片</string>
    <string name="camera">拍照</string>
    <string name="album">相册</string>
    <string name="get_result">获取结果</string>
    <string name="pic_path">图片路径：</string>
    <string name="tvpath">tvPath:</string>
    <string name="image_uri">图片Uri：</string>
    <string name="tvuri">tvUri:</string>
    <string name="repair_title">残损修复</string>
    <string name="manufacture_title">手写识别</string>
    <string name="identify_title">笔迹鉴定</string>
    <string name="imitate_title">风格模仿</string>
    <string name="identify_result">笔迹鉴定结果：</string>
    <string name="identify_button">开始笔迹鉴定</string>
    <string name="imitate_input">风格模仿输入：</string>
    <string name="imitate_hint">请输入示例</string>
    <string name="imitate_button">开始风格模仿</string>
    <string name="manufacture_input_text">手写图片</string>
    <string name="manufacture_result_text">手写识别结果：</string>
    <string name="title_activity_settings">设置</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">通用</string>

    <string name="pref_title_social_recommendations">启动社交建议</string>
    <string name="pref_description_social_recommendations">根据消息历史推荐联系人</string>

    <string name="pref_title_display_name">显示姓名</string>
    <string name="pref_default_display_name">David</string>

    <string name="pref_title_add_friends_to_messages">添加朋友</string>
    <string-array name="pref_example_list_titles">
        <item>总是</item>
        <item>可能</item>
        <item>永不</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">数据和同步</string>

    <string name="pref_title_sync_frequency">同步频率</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 分钟</item>
        <item>30 分钟</item>
        <item>1 小时</item>
        <item>3 小时</item>
        <item>6 小时</item>
        <item>永不</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">系统同步设置</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">通知</string>

    <string name="pref_title_new_message_notifications">新消息提醒</string>

    <string name="pref_title_ringtone">铃声</string>
    <string name="pref_ringtone_silent">静音</string>

    <string name="pref_title_vibrate">震动</string>
    <string name="clear_history_button">清空历史记录</string>
    <string name="identify_pic1_camera">图1拍照</string>
    <string name="identify_pic1_album">图1相册</string>
    <string name="identify_pic2_camera">图2拍照</string>
    <string name="identify_pic2_album">图2相册</string>
    <string name="help_title">帮助</string>
    <string name="repair_label">残损修复</string>
    <string name="identify_label">笔迹鉴定</string>
    <string name="imitate_label">风格模仿</string>
    <string name="manufacture_label">手写识别</string>
    <string name="dbTest_title">数据库测试</string>
    <string name="title_activity_login">登陆</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码 (可选)</string>
    <string name="action_sign_in">登陆或注册</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="error_invalid_email">无效的邮箱地址！</string>
    <string name="error_invalid_password">密码太短！</string>
    <string name="error_incorrect_password">密码不正确！</string>
    <string name="error_field_required">此项为必填项！</string>
    <string name="permission_rationale">"用户名需要提供完整邮箱！"</string>

    <string name="hint_email">邮箱</string>
    <string name="hint_password">密码</string>
    <string name="hint_name">姓名</string>
    <string name="btn_login">登陆</string>
    <string name="btn_register">注册</string>
    <string name="btn_link_to_register">没有账号? 立刻注册.</string>
    <string name="btn_link_to_login">已经注册! 点此登录.</string>
    <string name="welcome">欢迎使用本应用！</string>
    <string name="btn_logout">退出登陆</string>
    <string name="name">全名</string>
    <string name="up_button">提升权限</string>
    <string name="main_button">主界面</string>
    <string name="register_title">欢迎注册账户</string>
    <string name="login_title">欢迎登录账户</string>
    <string name="text_main">主页</string>
    <string name="text_help">帮助</string>
    <string name="text_mine">我的</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="title_activity_buttom_navi">ButtomNaviActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="possible_res">可能的结果：</string>
    <string name="possible_res1">结果1</string>
    <string name="possible_res2">结果2</string>
    <string name="possible_res3">结果3</string>
    <string name="string_getRes">生成结果：</string>
    <string name="string_inputRes">输入结果：</string>
    <string name="string_style">选择风格：</string>
    <string name="identify_result_text">笔迹鉴定结果：</string>
    <string name="possible_res4">自定义</string>
    <string name="permission_take_photo">需要获取拍照权限</string>
</resources>
