<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    tools:ignore="ExtraText">
    <include layout="@layout/toolbar_layout" />

    <TextView
        android:id="@+id/manufacture_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/manufacture_title" />

    <ImageView
        android:id="@+id/manufacture_input_pic"
        android:layout_width="240dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:src="@mipmap/func1" />

    <TextView
        android:id="@+id/manufacture_input_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="140dp"
        android:text="@string/manufacture_input_text" />

    <Button
        android:id="@+id/btnTakePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="170dp"
        android:text="@string/camera" />

    <Button
        android:id="@+id/btnSelectPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnTakePhoto"
        android:layout_centerHorizontal="true"
        android:text="@string/album" />

    <Button
        android:id="@+id/getResButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btnSelectPhoto"
        android:text="@string/get_result" />

    <TextView
        android:id="@+id/manufacture_result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="140dp"
        android:layout_marginStart="30dp"
        android:text="@string/manufacture_result_text" />

</RelativeLayout>