<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    tools:ignore="ExtraText">
    <include layout="@layout/toolbar_layout" />

    <TextView
        android:id="@+id/identify_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/identify_title" />

    <ImageView
        android:id="@+id/history_item1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp"
        android:src="@mipmap/func1" />

    <ImageView
        android:id="@+id/history_item1_res"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/history_item1"
        android:layout_marginEnd="30dp"
        android:src="@mipmap/func1" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="180dp"
        android:text="@string/identify_button" />

    <TextView
        android:id="@+id/identify_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/history_item1"
        android:layout_marginBottom="130dp"
        android:text="@string/identify_result" />

</RelativeLayout>