<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true"
    tools:ignore="ExtraText">

    <include layout="@layout/toolbar_layout" />

    <ImageView
        android:id="@+id/action_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:src="@mipmap/back_true" />

    <TextView
        android:id="@+id/identify_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/identify_title" />

    <ImageView
        android:id="@+id/identify_input_pic1"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/identify_input_text"
        android:layout_marginTop="170dp"
        android:src="@mipmap/default_select_photo" />

    <ImageView
        android:id="@+id/identify_input_pic2"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/identify_input_pic1"
        android:layout_marginEnd="40dp"
        android:src="@mipmap/default_select_photo" />

    <TextView
        android:id="@+id/identify_input_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="140dp"
        android:text="@string/manufacture_input_text" />

    <Button
        android:id="@+id/getIdentifyResButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:background="@drawable/button_login"
        android:elevation="0dp"
        android:padding="12dp"
        android:text="@string/get_result"
        android:textColor="#8B008B"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/identify_result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="430dp"
        android:layout_marginStart="30dp"
        android:text="@string/identify_result_text" />

    <TextView
        android:id="@+id/identifyRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="480dp"
        android:textColor="@color/red"
        android:text="0.0"
        android:textSize="30sp" />


</RelativeLayout>