<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:background="#ADD8E6"
    android:fitsSystemWindows="true">

    <include layout="@layout/toolbar_layout" />

    <ImageView
        android:id="@+id/main_frag_func1"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/main_frag_func2"
        android:layout_marginStart="30dp"
        android:src="@mipmap/repair" />

    <ImageView
        android:id="@+id/main_frag_func2"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="150dp"
        android:src="@mipmap/identify" />

    <ImageView
        android:id="@+id/main_frag_func3"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="60dp"
        android:src="@mipmap/imitate" />

    <ImageView
        android:id="@+id/main_frag_func4"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:layout_alignTop="@+id/main_frag_func3"
        android:src="@mipmap/manufacture" />

    <ImageView
        android:id="@+id/main_frag_func5"
        android:layout_width="1dp"
        android:layout_height="1dp" />

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/app_title" />

    <TextView
        android:id="@+id/repair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/main_frag_func1"
        android:layout_marginTop="120dp"
        android:textColor="#D2691E"
        android:text="@string/repair" />

    <TextView
        android:id="@+id/identify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/main_frag_func2"
        android:layout_alignTop="@+id/repair"
        android:textColor="#D2691E"
        android:text="@string/identify" />

    <TextView
        android:id="@+id/imitate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/main_frag_func1"
        android:layout_marginBottom="250dp"
        android:textColor="#D2691E"
        android:text="@string/imitate" />

    <TextView
        android:id="@+id/manufacture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/identify"
        android:layout_alignTop="@+id/imitate"
        android:textColor="#D2691E"
        android:text="@string/manufacture" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/main_frag_func1"
            android:layout_weight="1"
            android:background="#98FB90"
            android:text="设置" />

        <Button
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/main_frag_func2"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:background="#90EE90"
            android:text="帮助" />

        <Button
            android:id="@+id/btn_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:background="#98FB98"
            android:text="我的" />

    </android.support.v7.widget.LinearLayoutCompat>

</RelativeLayout>