<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:background="#FFFFFF"
    tools:ignore="ExtraText">

    <include layout="@layout/toolbar_layout" />

    <ImageView
        android:id="@+id/action_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:src="@mipmap/back_true" />

    <ImageView
        android:id="@+id/imitate_result"
        android:layout_width="240dp"
        android:layout_height="260dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:src="@mipmap/result02" />

    <TextView
        android:id="@+id/imitate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/imitate_title" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="130dp"
        android:text="@string/imitate_input" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="230dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp">

        <EditText
            android:id="@+id/imitate_input_text"
            android:layout_width="230dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:singleLine="false"
            android:background="@color/grey" />

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/style_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        android:entries="@array/style_arr" />

    <Button
        android:id="@+id/imitate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:background="@drawable/button_login"
        android:elevation="0dp"
        android:padding="12dp"
        android:text="@string/get_result"
        android:textColor="#8B008B"
        android:textSize="18sp" />


</RelativeLayout>